--- a/crawling/selenium_test.ipynb
+++ b/crawling/selenium_test.ipynb
@@ -424,6 +424,84 @@
     "# action Chain 에서 동작 중간에 잠시 멈추고 싶을 때 사용 (sleep 대신 pause 사용)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b191bf5e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b272bcd5",
+   "metadata": {},
+   "source": [
+    "| Beautiful Soup | Selenium |\n",
+    "| :--- | :--- |\n",
+    "| `soup.select_one()` | `driver.find_element()` |\n",
+    "| `soup.select()` | `driver.find_elements()` |\n",
+    "| `Tag` | `WebElement` |\n",
+    "| `tag.select()` | `web_element.find_elements()` |\n",
+    "| `tag.get_text()` | `web_element.text` |\n",
+    "| `tag.strings` | - |\n",
+    "| `tag.stripped_strings` | - |\n",
+    "| `tag['attr']` | `web_element.get_attribute('attr')` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31a16e37",
+   "metadata": {},
+   "source": [
+    "- selenium으로 JavaScript 사용하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a073e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "driver.get('https://workey.codeit.kr/costagram/index')\n",
+    "sleep(3)\n",
+    "\n",
+    "driver.execute_script('window,scrollTo(0,200);') # 200px 만큼 스크롤 내리기\n",
+    "scroll_height = driver.execute_script('return document.body.scrollHeight') # 현재 문서의 총 높이 구하기\n",
+    "print(scroll_height)\n",
+    "\n",
+    "# 현재 scrollHeight 가져오기\n",
+    "last_height = driver.execute_script('return document.body.scrollHeight')\n",
+    "\n",
+    "while True :\n",
+    "    # scrollHeight 만큼 스크롤 내리기\n",
+    "    driver.execute_script('window.scrollTo(0, document.body.scrollHeight);')\n",
+    "    \n",
+    "    # 새로운 내용 로딩때까지 기다림\n",
+    "    sleep(0.5)\n",
+    "    \n",
+    "    # 새로운 내용 로딩됐는지 확인\n",
+    "    new_height = driver.execute_script('return document.body.scrollHeight')\n",
+    "    if new_height == last_height :\n",
+    "        break\n",
+    "    last_height = new_height\n",
+    "\n",
+    "sleep(5)\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d626048d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
