--- a/crawling/selenium_test.ipynb
+++ b/crawling/selenium_test.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "057f1d27",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f09cdcf3",
    "metadata": {},
    "outputs": [],
@@ -137,14 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c1725242",
    "metadata": {},
    "outputs": [],
    "source": [
     "from time import sleep\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n"
+    "from selenium.webdriver.common.by import By\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n"
    ]
   },
   {
@@ -496,9 +498,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae0d6539",
+   "metadata": {},
+   "source": [
+    "- openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d626048d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1464\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openpyxl import Workbook\n",
+    "\n",
+    "wb = Workbook(write_only=True)\n",
+    "ws = wb.create_sheet('플레이리스트')\n",
+    "ws.append(['제목', '해시태그', '좋아요 수', '노래 수'])\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "driver.get('https://workey.codeit.kr/music')\n",
+    "sleep(3)\n",
+    "\n",
+    "driver.execute_script('window,scrollTo(0,200);') # 200px 만큼 스크롤 내리기\n",
+    "scroll_height = driver.execute_script('return document.body.scrollHeight') # 현재 문서의 총 높이 구하기\n",
+    "print(scroll_height)\n",
+    "\n",
+    "# 현재 scrollHeight 가져오기\n",
+    "last_height = driver.execute_script('return document.body.scrollHeight')\n",
+    "\n",
+    "while True :\n",
+    "    # scrollHeight 만큼 스크롤 내리기\n",
+    "    driver.execute_script('window.scrollTo(0, document.body.scrollHeight);')\n",
+    "    \n",
+    "    # 새로운 내용 로딩때까지 기다림\n",
+    "    sleep(0.5)\n",
+    "    \n",
+    "    # 새로운 내용 로딩됐는지 확인\n",
+    "    new_height = driver.execute_script('return document.body.scrollHeight')\n",
+    "    if new_height == last_height :\n",
+    "        break\n",
+    "    last_height = new_height\n",
+    "\n",
+    "playlist = driver.find_elements(by=By.CSS_SELECTOR, value='div.playlist__meta')\n",
+    "\n",
+    "for playlist in playlist :\n",
+    "    title = playlist.find_element(by=By.CSS_SELECTOR, value='h3.title').text\n",
+    "    hashtag = playlist.find_element(by=By.CSS_SELECTOR, value='p.tags').text\n",
+    "    like_count = playlist.find_element(by=By.CSS_SELECTOR, value='span.data__like-count').text\n",
+    "    music_count = playlist.find_element(by=By.CSS_SELECTOR, value='span.data__music-count').text\n",
+    "    ws.append([title, hashtag, like_count, music_count])\n",
+    "\n",
+    "driver.quit()\n",
+    "\n",
+    "wb.save('playlist.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58cd42e2",
+   "metadata": {},
+   "source": [
+    "- selenium + BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aedf4876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1464\n"
+     ]
+    }
+   ],
+   "source": [
+    "wb = Workbook(write_only=True)\n",
+    "ws = wb.create_sheet('플레이리스트')\n",
+    "ws.append(['제목', '해시태그', '좋아요 수', '노래 수'])\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "driver.get('https://workey.codeit.kr/music')\n",
+    "sleep(3)\n",
+    "\n",
+    "driver.execute_script('window,scrollTo(0,200);') # 200px 만큼 스크롤 내리기\n",
+    "scroll_height = driver.execute_script('return document.body.scrollHeight') # 현재 문서의 총 높이 구하기\n",
+    "print(scroll_height)\n",
+    "\n",
+    "# 현재 scrollHeight 가져오기\n",
+    "last_height = driver.execute_script('return document.body.scrollHeight')\n",
+    "\n",
+    "while True :\n",
+    "    # scrollHeight 만큼 스크롤 내리기\n",
+    "    driver.execute_script('window.scrollTo(0, document.body.scrollHeight);')\n",
+    "    \n",
+    "    # 새로운 내용 로딩때까지 기다림\n",
+    "    sleep(0.5)\n",
+    "    \n",
+    "    # 새로운 내용 로딩됐는지 확인\n",
+    "    new_height = driver.execute_script('return document.body.scrollHeight')\n",
+    "    if new_height == last_height :\n",
+    "        break\n",
+    "    last_height = new_height\n",
+    "\n",
+    "# 스크롤 완료\n",
+    "# 필요한 html 모두 로딩됨\n",
+    "\n",
+    "music_page = driver.page_source\n",
+    "# html 가져왔으니 driver 종료\n",
+    "driver.quit()\n",
+    "\n",
+    "# bs4로 파싱\n",
+    "soup = BeautifulSoup(music_page, 'html.parser')\n",
+    "\n",
+    "playlist = soup.select('.playlist__meta')\n",
+    "\n",
+    "for playlist in playlist :\n",
+    "    title = playlist.select_one('h3.title').text\n",
+    "    hashtag = playlist.select_one('p.tags').text\n",
+    "    like_count = playlist.select_one('span.data__like-count').text\n",
+    "    music_count = playlist.select_one('span.data__music-count').text\n",
+    "    ws.append([title, hashtag, like_count, music_count])\n",
+    "\n",
+    "wb.save('playlist_bs4.xlsx')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d626048d",
+   "id": "d28fa873",
    "metadata": {},
    "outputs": [],
    "source": []
