--- a/crawling/selenium_test.ipynb
+++ b/crawling/selenium_test.ipynb
@@ -642,11 +642,510 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "606646d3",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff1f59ed",
+   "metadata": {},
+   "source": [
+    "### Selenium 으로 Select 태그"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b87c304a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 라이브러리\n",
+    "from selenium.webdriver.support.ui import Select"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d28fa873",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "city_code_select = Select(driver.find_element(by=By.CSS_SELECTOR, value='#cityCode'))\n",
+    "\n",
+    "# 옵션 이름으로 선택(웹사이트에서 보이는 옵션 이름)\n",
+    "city_code_select.select_by_visible_text('서울특별시')\n",
+    "\n",
+    "# 옵션의 value로 선택('서울특별시' 옵션의 value는 1100)\n",
+    "city_code_select.select_by_value('1100')\n",
+    "\n",
+    "# 옵션의 인덱스로 선택('서울특별시'는 두 번째 옵션)\n",
+    "city_code_select.select_by_index(1)\n",
+    "\n",
+    "\n",
+    "sgg_city_code_select = Select(driver.find_element(by=By.CSS_SELECTOR, value='#sggCityCode'))\n",
+    "\n",
+    "# 옵션 이름으로 선택(웹사이트에서 보이는 옵션 이름)\n",
+    "sgg_city_code_select.select_by_visible_text('종로구')\n",
+    "\n",
+    "# 옵션의 value로 선택('종로구' 옵션의 value는 2110101)\n",
+    "sgg_city_code_select.select_by_value('2110101')\n",
+    "\n",
+    "# 옵션의 인덱스로 선택('종로구'는 두 번째 옵션)\n",
+    "sgg_city_code_select.select_by_index(1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5813221",
+   "metadata": {},
+   "source": [
+    "- 실습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3e6af63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import Select\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "# 선거 웹사이트 접속\n",
+    "driver.get('http://info.nec.go.kr/main/showDocument.xhtml?electionId=0020240410&topMenuId=CP&secondMenuId=CPRI03')\n",
+    "sleep(1)\n",
+    "\n",
+    "# '국회의원선거'탭 클릭 \n",
+    "driver.find_element(by=By.CSS_SELECTOR, value='#electionId2').click()\n",
+    "\n",
+    "# 서울특별시 선택\n",
+    "city_code_select = Select(driver.find_element(by=By.CSS_SELECTOR, value='#cityCode'))\n",
+    "city_code_select.select_by_visible_text('서울특별시')\n",
+    "\n",
+    "# 종로구 선택\n",
+    "sgg_city_code_select = Select(driver.find_element(by=By.CSS_SELECTOR, value='#sggCityCode'))\n",
+    "sgg_city_code_select.select_by_visible_text('종로구') \n",
+    "\n",
+    "# '검색'버튼 클릭\n",
+    "driver.find_element(by=By.CSS_SELECTOR, value='#spanSubmit').click()\n",
+    "\n",
+    "# 필요한 국회의원 정보 가져오기\n",
+    "\n",
+    "# 웹 드라이버 종료\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19d52ad5",
+   "metadata": {},
+   "source": [
+    "- 기본 기능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2169b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 웹 페이지로 이동\n",
+    "driver.get('URL')\n",
+    "\n",
+    "# 뒤로가기 (이전 페이지로 이동)\n",
+    "driver.back()\n",
+    "\n",
+    "# 앞으로가기 (다음 페이지로 이동)\n",
+    "driver.forward()\n",
+    "\n",
+    "# 새로고침\n",
+    "driver.refresh()\n",
+    "\n",
+    "# 현재 url 가져오기\n",
+    "current_url = driver.current_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6349510",
+   "metadata": {},
+   "source": [
+    "- 웹 브라우저 창 제어"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45e83ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀스크린\n",
+    "driver.fullscreen_window()\n",
+    "\n",
+    "# 최대화\n",
+    "driver.maximize_window()\n",
+    "\n",
+    "# 최소화\n",
+    "driver.minimize_window()\n",
+    "\n",
+    "# 창 크기 조절\n",
+    "driver.set_window_size(width, height) # width: 너비, height: 높이\n",
+    "\n",
+    "# 창 위치 조절\n",
+    "driver.set_window_position(x, y) # x: x좌표, y: y좌표\n",
+    "\n",
+    "# 창 닫기\n",
+    "driver.close() # 현재 탭 닫기\n",
+    "driver.quit() # 모든 탭 닫기\n",
+    "\n",
+    "# 스크린샷\n",
+    "driver.save_screenshot('screenshot.png') # 현재 페이지 스크린샷 저장"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "564dd53e",
+   "metadata": {},
+   "source": [
+    "- 웹 브라우저 창 여러 개 다루기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44ab40f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "# 쿠팡 '커피' 검색 결과 페이지 접속\n",
+    "driver.get('https://www.coupang.com/np/search?component=&q=%EC%BB%A4%ED%94%BC&channel=user')\n",
+    "sleep(1)\n",
+    "\n",
+    "# 각 아이템은 <li> 태그에 있는데요. ul.search-product-list > li.search-product 선택자를 사용하면 모든 아이템을 가져올 수 있습니다. \n",
+    "# 이렇게 조금 더 자세하게 선택자를 적어 준 이유는, \n",
+    "# 우리가 원치 않는 오류를 일으키는 li.search-product 요소를 제외하고 \n",
+    "# 원하는 항목만 선택하기 위해서입니다.\n",
+    "products = driver.find_elements(by=By.CSS_SELECTOR, value='ul.search-product-list > li.search-product')\n",
+    "# 그리고 아이템을 클릭합니다.\n",
+    "products[0].click()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11bee0fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 하지만 새 탭은 열리지만 이렇게 오류가 나는데요. \n",
+    "# 이 주소를 평소에 사용하는 크롬에 붙여 넣으면 제대로 동작합니다. \n",
+    "# 보통 이럴 땐 해당 사이트에서 자동화 코드를 막아 놓은 거라고 보시면 됩니다.\n",
+    "# 일단은 이런 식으로 웹 드라이버에 --disable-blink-features=AutomationControlled 옵션을 추가하면 막아 놓은 걸 우회할 수 있습니다.\n",
+    "\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument('--disable-blink-features=AutomationControlled')\n",
+    "driver = webdriver.Chrome(options=options)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26e0659f",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "하지만 여기서 주의하셔야 할 점은 현재 웹 브라우저에서 열린 탭과 Selenium이 포커스된 탭은 다르다는 점입니다. Selenium이 포커스된 탭은, Selenium 웹 드라이버가 현재 '다루고 있는' 탭입니다. 이건 우리가 설정해 주지 않는 한 바뀌지 않습니다. 그러니까 지금처럼 새로운 상세 페이지가 열렸어도, Selenium은 .get()으로 접속한 첫 번째 탭, 검색 페이지에 포커스되어 있는 거죠.\n",
+    "\n",
+    "그래서 이렇게 새로운 탭이 열렸어도, 계속 검색 결과 페이지에 있는 것처럼 새로운 아이템들을 클릭할 수 있습니다.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a0d70a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument('--disable-blink-features=AutomationControlled')\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "# 쿠팡 '커피' 검색 결과 페이지 접속\n",
+    "driver.get('https://www.coupang.com/np/search?component=&q=%EC%BB%A4%ED%94%BC&channel=user')\n",
+    "sleep(1)\n",
+    "\n",
+    "products = driver.find_elements(by=By.CSS_SELECTOR, value='ul.search-product-list > li.search-product')\n",
+    "\n",
+    "# 총 3개의 상세 페이지가 열렸습니다.\n",
+    "products[0].click()\n",
+    "products[1].click()\n",
+    "products[2].click()\n",
+    "\n",
+    "sleep(5)\n",
+    "driver.quit()\n",
+    "\n",
+    "# Selenium이 포커스된 탭을 바꾸려면 아래 코드를 실행하면 됩니다. \n",
+    "# 아래 코드를 실행하면 i 번째 탭으로 포커스가 바뀝니다.\n",
+    "driver.switch_to.window(driver.window_handles[i])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48f8dee4",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "driver.window_handles는 현재 열려 있는 탭 리스트라고 생각하시면 됩니다. i 번째 탭을 driver.window_handles[i]로 가져온 다음, driver.switch_to.window() 메소드에 넣어 주면 됩니다.\n",
+    "\n",
+    "참고로 현재 포커스된 탭은 driver.current_window_handle로 확인하실 수 있습니다.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62006938",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument('--disable-blink-features=AutomationControlled')\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "# 쿠팡 '커피' 검색 결과 페이지 접속\n",
+    "driver.get('https://www.coupang.com/np/search?component=&q=%EC%BB%A4%ED%94%BC&channel=user')\n",
+    "sleep(1)\n",
+    "\n",
+    "products = driver.find_elements(by=By.CSS_SELECTOR, value='ul.search-product-list > li.search-product')\n",
+    "\n",
+    "products[0].click()\n",
+    "products[1].click()\n",
+    "products[2].click()\n",
+    "\n",
+    "# 모든 탭 리스트\n",
+    "print(driver.window_handles)\n",
+    "\n",
+    "# 현재 포커스된 탭 - 아직 탭을 바꿔 주지 않았기 때문에 처음 .get()으로 접속한 탭\n",
+    "print(driver.current_window_handle)\n",
+    "\n",
+    "# 두 번째 탭으로 바꿔 주기\n",
+    "driver.switch_to.window(driver.window_handles[1])\n",
+    "\n",
+    "# 현재 포커스된 탭\n",
+    "print(driver.current_window_handle)\n",
+    "\n",
+    "sleep(5)\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fffe348",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff2cbbe1",
+   "metadata": {},
+   "source": [
+    "## iframe 다루기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c82eb1fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.find_element(by=By.CSS_SELECTOR, value='#blogTitleText') # 웹 요소를 찾을 수 없다는 오류\n",
+    "# iframe 안에 있는 요소를 찾으려면, 먼저 그 iframe으로 포커스를 바꿔 주어야 합니다.\n",
+    "# iframe으로 포커스를 바꾸려면, 그 iframe 요소를 찾아서 driver.switch_to.frame() 메소드에 넣어 주면 됩니다.\n",
+    "iframe = driver.find_element(by=By.CSS_SELECTOR, value='#mainFrame')\n",
+    "driver.switch_to.frame(iframe)\n",
+    "# 이제 iframe 안에 있는 요소를 찾을 수 있습니다.\n",
+    "driver.find_element(by=By.CSS_SELECTOR, value='#blogTitleText') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c80e6b1b",
+   "metadata": {},
+   "source": [
+    "- iframe 스위칭"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ffc290a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.switch_to.window() # 탭/창으로 이동\n",
+    "driver.switch_to.frame() # 프레임으로 이동"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141b6142",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "driver.switch_to.frame() 안에는 다음과 같은 값을 넣을 수 있습니다.\n",
+    "\n",
+    "- <iframe> 웹 요소\n",
+    "- <iframe>의 id 속성값\n",
+    "- <iframe>의 name 속성값(name 속성값은 중복될 수 있습니다)\n",
+    "- <iframe> 인덱스\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "619daccd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 웹 요소 파라미터로 사용\n",
+    "driver.switch_to.frame(driver.find_element(by=By.CSS_SELECTOR, value='#mainFrame'))\n",
+    "\n",
+    "# iframe의 id 또는 name 속성값 사용\n",
+    "driver.switch_to.frame('mainFrame')\n",
+    "\n",
+    "# iframe 인덱스 사용\n",
+    "driver.switch_to.frame(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae2978d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(3)\n",
+    "\n",
+    "# 코드잇 네이버 블로그 접속\n",
+    "driver.get('https://blog.naver.com/codeitofficial')\n",
+    "sleep(1)\n",
+    "\n",
+    "# 'mainFrame'으로 이동\n",
+    "driver.switch_to.frame('mainFrame')\n",
+    "\n",
+    "# 블로그 글 내용 출력\n",
+    "print(driver.find_element(by=By.CSS_SELECTOR, value='div.se-main-container').text)\n",
+    "\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e87b4b98",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "078cee3e",
+   "metadata": {},
+   "source": [
+    "### robots.txt\n",
+    "> robots.txt 파일은 웹 크롤러(크롤링 전용 프로그램)들이 웹사이트를 크롤링할 때 지켜야 하는 규칙을 명시해 놓은 파일인데요, 웹 스크래핑을 할 때도 robots.txt 파일을 가이드라인으로 삼으면 좋습니다.\n",
+    "\n",
+    "> obots.txt 파일은 웹사이트 루트(도메인 뒤에 경로가 붙지 않은 주소)에서 찾을 수 있습니다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f8273d0",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "User-agent: *\n",
+    "Disallow: /search\n",
+    "Allow: /search/about\n",
+    "Allow: /search/static\n",
+    "Allow: /search/howsearchworks\n",
+    "Disallow: /sdch\n",
+    "Disallow: /groups\n",
+    "Disallow: /index.html?\n",
+    "Disallow: /?\n",
+    "\n",
+    "...\n",
+    "\n",
+    "# AdsBot\n",
+    "User-agent: AdsBot-Google\n",
+    "Disallow: /maps/api/js/\n",
+    "Allow: /maps/api/js\n",
+    "Disallow: /maps/api/place/js/\n",
+    "Disallow: /maps/api/staticmap\n",
+    "Disallow: /maps/api/streetview\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "069b8fa2",
+   "metadata": {},
+   "source": [
+    "> 예를 들어 위에는 구글 robots.txt 파일의 일부인데요. robots.txt 파일에서 다음과 같은 의미입니다.\n",
+    "\n",
+    "- User-agent는 누구에게 규칙이 적용되는지를 뜻합니다. *는 모두에게 규칙이 적용된다는 뜻입니다.\n",
+    "- Disallow는 경로 아래에 있는 모든 URL에 대해 크롤링을 금지한다는 뜻이고, Allow는 경로 아래에 있는 모든 URL에 대해 크롤링을 허용한다는 뜻합니다.\n",
+    "> 처음 몇 줄을 해석해 보면, 모든 크롤러는 www.google.com/search로 시작하는 URL은 크롤링하면 안 되는데, 그중 www.google.com/search/about, www.google/com/search/static, www.google.com/search/howsearchworks로 시작하는 URL들은 괜찮다는 뜻입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faf3621d",
+   "metadata": {},
    "source": []
   }
  ],
